fix: update header height and alignment

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ html {
   height: 100vh;
 }
 
-.container .header{
+.header{
   position: fixed;
   width: 100%;
   height: 60px;
@@ -24,7 +24,10 @@ html {
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 
-.container .header ul {
+.header ul {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
   gap: 15px;
   list-style: none;
   margin: 0;
@@ -32,12 +35,11 @@ html {
   overflow: hidden;
 }
 
-.container .header ul li {
+.header ul li {
   float: center;
 }
 
-.container .header ul li a {
-  display: block;
+.header ul li a {
   color: white;
   text-decoration: none;
   font-size: 16px;
@@ -45,11 +47,11 @@ html {
   text-align: center;
 }
 
-.container .header nav ul li a:hover {
+.header ul li a:hover {
   color: #FFD700;
 }
 
-.container .sidebar{
+.sidebar{
   position: fixed;
   z-index: 3;
   width: 250px;
@@ -62,7 +64,7 @@ html {
   text-align: left;
 }
 
-.container .sidebar .profile-image {
+.sidebar .profile-image {
   margin: 0 auto 20px;
   border-radius: 50%;
   width: 150px;
@@ -71,53 +73,54 @@ html {
   border: 5px solid white;
 }
 
-.container .sidebar h2 {
+.sidebar h2 {
   font-size: 24px;
   margin-bottom: 15px;
   color: white;
 }
 
-.container .sidebar ul {
+.sidebar ul {
   list-style: none;
   padding: 0;
 }
 
-.container .sidebar li {
+.sidebar li {
   margin-bottom: 10px;
 }
 
-.container .sidebar a {
+.sidebar a {
   color: white;
   text-decoration: none;
 }
 
-.container .content {
-  left: 250px;
+.content {
+  left: 300px;
   top: 60px;
   bottom: 60px;
   padding: 20px;
   background-color: #FAF3E0;
+  text-align: left;
 }
 
-.container .content h1 {
+.content h1 {
   color: #5C4033;
   text-align: center;
 }
 
-.container .content h2 {
+.content h2 {
   color: #A4562B;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
-  text-align: left;
 }
 
-.container .content p, .container .content li {
+.content p, 
+.content li {
   color: #5A5A5A;
   line-height: 1.8;
   margin-bottom: 15px;
   text-align: justify;
 }
 
-.container .content code {
+.content code {
   background-color: #F4F4F4;
   padding: 2px 4px;
   border-radius: 4px;
@@ -126,7 +129,7 @@ html {
   text-align: left;
 }
 
-.container .content pre {
+.content pre {
   background-color: #F4F4F4;
   padding: 10px;
   border: 1px solid #DDD;
@@ -135,7 +138,8 @@ html {
   color: #4F4F4F;
   overflow-x: auto;
 }
-.container .footer{
+
+.footer{
   position: fixed;
   width: 100%;
   z-index: 1;
